--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "handlebars.moment": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.14"
   }
 }
