--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to register users email for newletter",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars.moment": "^1.0.4",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.14"
+    "mongoose": "^5.4.14",
+    "nodemon": "^1.18.10"
   }
 }
