--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "express-handlebars": "^3.0.0",
     "handlebars.moment": "^1.0.4",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.14",
-    "nodemon": "^1.18.10"
+    "mongoose": "^5.4.14"
   }
 }
