--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/kugak/icon-charity#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "handlebars.moment": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.14",
